--- a/reel-gui/package.json
+++ b/reel-gui/package.json
@@ -12,16 +12,17 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "node-sass": "^7.0.0",
+    "puppeteer": "^13.0.1",
     "react": "^16.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^16.0.2",
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "babel-jest": "^26.6.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -31,7 +32,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --testPathIgnorePatterns=.*e2e.test.js",
+    "test:e2e": "react-scripts test --testPathPattern=.*e2e.test.js$",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
